# display-manager

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  a.out  authentication.cc  install.sh  logger.cc  loginwindow.cpp  loginwindow.h  loginwindow.ui  main  main.cc  test.cc  todo.md  ui.cc  userauthentication.h
.github/workflows/: codeql-analysis.yml
backup/: dracula-bin  userauthentication.cpp  userauthentication.h
config/: dm.conf  dm.service
config/systemd/: dm.service
headers/: authentication.h  logger.h  ui.h
utils/: date_time.cc  xorg.cc
utils/headers/: date_time.h  xorg.h
